--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
 }
 
 #root {
-    --color-bg: rgb(253, 225, 229);
+    --color-bg: rgb(66, 83, 83);
 
     --transition: all 400ms ease-in-out;
 }
@@ -23,11 +23,16 @@ html {
 }
 
 body {
-    background-color: var(--color-bg);
+    background-color: rgb(66, 83, 83);
+}
+
+img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
 }
 
 section {
-    background: rgb(66, 83, 83);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,4 +119,104 @@ section {
         }
     }
 
+}
+
+
+/*========== HOME PAGE ==========*/
+main {
+    width: 80%;
+    margin: 5rem auto;
+    color: whitesmoke;
+    border-radius: 1rem;
+
+    .main__container {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+
+        .sidebar {
+            background-color: rgb(65, 62, 57);
+        }
+
+    }
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
+    padding: 0 0.5rem;
+    background-color: rgb(44, 41, 36);
+
+    .nav__right {
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+
+        .nav__avatar {
+            border-radius: 50%;
+            overflow: hidden;
+
+            img {
+                width: 3rem;
+            }
+        }
+
+        button {
+            background-color: antiquewhite;
+            color: gray;
+            padding: 0.3rem 0.65rem;
+            border-radius: 1rem;
+            cursor: pointer;
+            font-family: inherit;
+        }
+
+    }
+
+
+}
+
+
+/*========== Search Box ========*/
+
+.search__box {
+    margin: 1rem 0;
+    padding: 0.5rem;
+
+    input {
+        padding: 0.5rem 1rem;
+        background-color: transparent;
+        border-bottom: 1px solid aliceblue;
+        font-family: inherit;
+        color: whitesmoke;
+
+        &::placeholder {
+            color: white;
+        }
+
+    }
+}
+
+/*========= CHATS ==========*/
+.sidebar__chats {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .sidebar__chat {
+        display: flex;
+        justify-content: flex-start;
+        gap: 1rem;
+
+        .side__avatar {
+            overflow: hidden;
+            border-radius: 50%;
+
+            img {
+                width: 2.8rem;
+            }
+        }
+    }
 }
